--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
         "Imageediting",
+        "ingame",
         "kasia",
         "minecraft",
         "Shotcut",
         "sidebarmenu",
+        "soulbreaker",
         "Soulbreaker"
     ]
 }
